--- a/.env
+++ b/.env
@@ -1,12 +1,10 @@
 VUE_APP_PROJECT = "https://github.com/BAYUEQI/ZQ-SubLink"
 
-VUE_APP_BOT_LINK = "https://t.me/subconverter_discuss"
+VUE_APP_BACKEND_RELEASE = "https://github.com/BAYUEQI/ZQ-SubApi"
 
-VUE_APP_BACKEND_RELEASE = "https://github.com/tindy2013/subconverter/actions"
+VUE_APP_SUBCONVERTER_REMOTE_CONFIG = "https://github.com/BAYUEQI/ZQ-SubLink/blob/master/example.txt"
 
-VUE_APP_SUBCONVERTER_REMOTE_CONFIG = "https://raw.githubusercontent.com/tindy2013/subconverter/master/base/config/example_external_config.ini"
-
-VUE_APP_SUBCONVERTER_DOC_ADVANCED = "https://github.com/tindy2013/subconverter/blob/master/README-cn.md#%E8%BF%9B%E9%98%B6%E9%93%BE%E6%8E%A5"
+VUE_APP_SUBCONVERTER_DOC_ADVANCED = "https://github.com/BAYUEQI/ZQ-SubLink/blob/master/subconverter.md"
 
 # API 后端
 VUE_APP_SUBCONVERTER_DEFAULT_BACKEND = "https://subapi.vpnjacky.dpdns.org"
