--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "sub-web",
-    "name": "sub-web",
+    "short_name": "ZQ-SubLink",
+    "name": "ZQ-SubLink",
     "icon": [
         {
             "src": "./img/icons/icon-192x192.png",
