--- a/.env
+++ b/.env
@@ -10,10 +10,10 @@ VUE_APP_SUBCONVERTER_DOC_ADVANCED = "https://github.com/BAYUEQI/ZQ-SubLink/blob/
 VUE_APP_SUBCONVERTER_DEFAULT_BACKEND = "https://subapi.vpnjacky.dpdns.org"
 
 # 短链接后端
-VUE_APP_MYURLS_API = "https://url.520jacky.dpdns.org/create"
+VUE_APP_MYURLS_API = "https://url.520jacky.dpdns.org"
 
 # 文本托管后端
-VUE_APP_CONFIG_UPLOAD_API = "https://oss.wcc.best/upload"
+VUE_APP_CONFIG_UPLOAD_API = "https://file.520jacky.dpdns.org/api/paste"
 
 # 页面配置
 VUE_APP_USE_STORAGE = true 
